<resources>
    <string name="app_name">KT Telematic</string>
    <string name="t">T</string>
    <string name="welcome">WELCOME</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_a_account">Create a new account? Sign up</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="user_mail">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="note_password_conditions"><font color="#797C8A">Note: </font>
    <font color="#000000">Password should contain at least 8 characters, 1 uppercase letter, 1 lowercase letter, and 1 special character.</font></string>
    <string name="register">Register</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="enter_your_passwprd">Enter your Password</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phome_number">Enter your phone number</string>
    <string name="enter_valid_email">Enter Valid email address</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="enter_your_valid_phone_number">Enter valid Phone Number</string>
    <string name="existing_user">Existing User!</string>
    <string name="already_registered">This username is already registered</string>
    <string name="registered">Registered!</string>
    <string name="account_registered_successfully">Account registered successfully</string>
    <string name="user_name_is_invalid">User name or Password is Invalid</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome1">Welcome!</string>
    <string name="guest">Guest</string>
    <string name="locations">Locations</string>
    <string name="add_locations">Add Locations</string>
    <string name="location">Location</string>
    <string name="add_another_account">Add another account</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="user_update">User Update</string>
    <string name="user_updated_successfully">User Updated Successfully</string>
    <string name="are_you_sure_logout">Are you sure want to logout?</string>
    <string name="location_permission">Location Permission</string>
    <string name="this_app_required_location_permission">This app requires location permission and GPS is enabled to function properly.</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="select_location">Select Location</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="locate_me">Locate me</string>
    <string name="save_location">Save Location</string>
    <string name="turn_on_gps">Turn on your GPS</string>
    <string name="success">Success!!</string>
    <string name="address_added_successfully">Address Added Successfully.</string>
    <string name="ok">Ok</string>
</resources>