<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIconIV"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="@dimen/siq_24"
                android:padding="6dp"
                android:src="@drawable/back_icon"
                app:layout_constraintBottom_toBottomOf="@+id/welcomeToKT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/welcomeToKT" />

            <TextView
                android:id="@+id/welcomeToKT"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/siq_24"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/firstNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/siq_24"
                android:layout_marginVertical="@dimen/siq_32"
                android:autofillHints="@string/first_name"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeToKT" />

            <EditText
                android:id="@+id/latNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/siq_24"
                android:layout_marginVertical="@dimen/siq_16"
                android:autofillHints="@string/first_name"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameET" />

            <EditText
                android:id="@+id/userMailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/siq_16"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:hint="@string/user_mail"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="@+id/latNameET"
                app:layout_constraintStart_toStartOf="@+id/latNameET"
                app:layout_constraintTop_toBottomOf="@+id/latNameET" />

            <EditText
                android:id="@+id/userPhoneNumberET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/siq_16"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="@+id/latNameET"
                app:layout_constraintStart_toStartOf="@+id/latNameET"
                app:layout_constraintTop_toBottomOf="@+id/userMailET" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/siq_16"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="@+id/userPhoneNumberET"
                app:layout_constraintStart_toStartOf="@+id/userPhoneNumberET"
                app:layout_constraintTop_toBottomOf="@+id/userPhoneNumberET" />

            <TextView
                android:id="@+id/passwordConditionsTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/siq_16"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/note_password_conditions"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/passwordET"
                app:layout_constraintStart_toStartOf="@+id/passwordET"
                app:layout_constraintTop_toBottomOf="@+id/passwordET" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signupACB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/siq_24"
                android:background="@drawable/corner_radius_5_bg"
                android:backgroundTint="@color/primary_color"
                android:padding="5dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/passwordConditionsTV"
                app:layout_constraintStart_toStartOf="@+id/passwordConditionsTV"
                app:layout_constraintTop_toBottomOf="@+id/passwordConditionsTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>