<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

            <TextView
                android:id="@+id/welcomeToKT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ProfileCL"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/siq_24"
                android:layout_marginVertical="@dimen/siq_32"
                android:background="@drawable/corner_r8_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeToKT">

                <ImageView
                    android:id="@+id/profileIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="@dimen/siq_16"
                    android:scaleType="fitXY"
                    android:src="@mipmap/profile_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/primary_color" />

                <EditText
                    android:id="@+id/userNameET"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="@dimen/siq_16"
                    android:background="@color/white"
                    android:fontFamily="@font/inter"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileIV"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordCL"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/siq_24"
                android:layout_marginVertical="@dimen/siq_20"
                android:background="@drawable/corner_r8_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProfileCL">

                <ImageView
                    android:id="@+id/passwordIconIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="@dimen/siq_16"
                    android:scaleType="fitXY"
                    android:src="@mipmap/password_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/primary_color" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="@dimen/siq_16"
                    android:background="@color/white"
                    android:fontFamily="@font/inter"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/passwordIconIV"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/siq_2"
                android:layout_marginTop="@dimen/siq_12"
                android:fontFamily="@font/inter_medium"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/siq_18"
                app:layout_constraintEnd_toEndOf="@+id/passwordCL"
                app:layout_constraintTop_toBottomOf="@+id/passwordCL" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInACB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/siq_16"
                android:background="@drawable/corner_radius_5_bg"
                android:backgroundTint="@color/primary_color"
                android:padding="5dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/signupTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/siq_2"
                android:layout_marginVertical="24dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="end"
                android:text="@string/create_a_account"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/siq_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signInACB"
                app:layout_constraintStart_toStartOf="@+id/signInACB"
                app:layout_constraintTop_toBottomOf="@+id/signInACB" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>