<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender_mist"
    tools:context=".activities.DashboardActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/addLocationsACB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardAppBarCL">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profileCL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/corner_radius_5_bg"
                android:elevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/helloTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="start"
                    android:text="@string/welcome1"
                    android:textColor="@color/primary_color"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userNameTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/inter"
                    android:gravity="start"
                    android:text="@string/guest"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/helloTV"
                    app:layout_constraintStart_toStartOf="@+id/helloTV"
                    app:layout_constraintTop_toBottomOf="@+id/helloTV" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/storeLocations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@color/white"
                android:paddingHorizontal="8dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="start"
                android:text="@string/locations"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/profileCL"
                app:layout_constraintStart_toStartOf="@+id/profileCL"
                app:layout_constraintTop_toBottomOf="@+id/profileCL" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/locationsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storeLocations" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashboardAppBarCL"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/userProfileIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userProfileIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/profile_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addLocationsACB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/corner_radius_5_bg"
        android:backgroundTint="@color/primary_color"
        android:padding="5dp"
        android:text="@string/add_locations"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>