<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashboardAppBarCL"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/back_icon"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/logoutACB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardAppBarCL">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstNameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/siq_24"
                android:layout_marginVertical="@dimen/siq_32"
                android:autofillHints="@string/first_name"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/latNameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/siq_24"
                android:layout_marginVertical="@dimen/siq_16"
                android:autofillHints="@string/first_name"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:textSize="18sp"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTV" />

            <TextView
                android:id="@+id/userMailTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/siq_16"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textSize="18sp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="@+id/latNameTV"
                app:layout_constraintStart_toStartOf="@+id/latNameTV"
                app:layout_constraintTop_toBottomOf="@+id/latNameTV" />

            <TextView
                android:id="@+id/userPhoneNumberTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/siq_16"
                android:background="@drawable/corner_r8_outline"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="@dimen/siq_12"
                android:paddingVertical="@dimen/siq_12"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/userMailTV"
                app:layout_constraintStart_toStartOf="@+id/userMailTV"
                app:layout_constraintTop_toBottomOf="@+id/userMailTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutACB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/corner_radius_5_bg"
        android:backgroundTint="@color/primary_color"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>